--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ description: Notes, rants, and bookmarks.
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Learn markdown: "http://www.markdowntutorial.com/"
+    - Fork me: "https://github.com/aawc/aawc.github.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
