--- a/_config.yml
+++ b/_config.yml
@@ -71,20 +71,19 @@ author:
 social-network-links:
   rss: true
   email: "www.bin@khaneja.org"
-#  facebook: daattali
+#  facebook: yourname
   github: aawc
   twitter: aawc
 #  reddit: yourname
-#  google-plus: +DeanAttali
   linkedin: khaneja
 #  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
+#  stackoverflow: "/"
+#  snapchat: 
+#  instagram: 
+#  youtube: user/yourname
 #  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
+#  telephone: +15128433833
+#  steam: yourname
 #  twitch: yourname
 #  yelp: yourname
 
@@ -97,7 +96,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "varun.khaneja.org"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "varun.khaneja.org"
 
 # --- Web Statistics Section --- #
 
@@ -128,17 +127,6 @@ url-pretty: "varun.khaneja.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
-
-# Staticman support
-staticman:
-  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
-  branch     : # eg. "master" If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
-  endpoint   : # URL of your own deployment (with trailing slash) (will fallback to a public GitLab instance)
-  reCaptcha:
-    # reCaptcha for Staticman (OPTIONAL)
-    # If you use reCaptcha, you must also set these parameters in staticman.yml
-    siteKey  : # Use your own site key, you need to apply for one on Google
-    secret   : # ENCRYPT your password by going to https://staticman3.herokuapp.com/v3/encrypt/<your-site-secret>
 
 # --- Misc --- #
 
@@ -252,5 +240,3 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
