Remove sharing to LinkedIn, good riddance!

--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ share-links-active:
   twitter: true
   facebook: false
   google: false
-  linkedin: true
+  linkedin: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
