--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Title: Varun Khaneja"
 title_separator          : "-"
 name                     : &name "Name: Varun Khaneja"
 description              : &description "Your Name's portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://aawc.github.com # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://varun.khaneja.org # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "aawc/aawc.github.com"
