--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Title: Varun Khaneja"
+title                    : "Varun Khaneja (Title)"
 title_separator          : "-"
-name                     : &name "Name: Varun Khaneja"
+name                     : &name "Varun Khaneja (Name)"
 description              : &description "Your Name's portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://varun.khaneja.org # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
