--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Varun Khaneja (Title)"
 title_separator          : "-"
 name                     : &name "Varun Khaneja (Name)"
-description              : &description "Your Name's portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Varun's Journal"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://varun.khaneja.org # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -122,7 +122,7 @@ staticman:
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  hide                   : true     # change to true to hide the RSS feed in the footer
+  hide                   : false     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
 
 
